[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
description = "AgentCore AG-UI Agent using Strands SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-strands >= 0.1.7",
    "ag-ui-protocol >= 0.1.10",
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "botocore[crt] >= 1.35.0",
    "fastapi >= 0.115.12",
    "langfuse >= 4.0.0",
    "strands-agents >= 1.15.0",
    "strands-agents-tools >= 0.2.14",
    "uvicorn >= 0.34.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
